@@ -7,40 +7,49 @@ import com.iab.openrtb.request.Format;
 import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
+import org.prebid.server.bidder.model.Price;
 import org.prebid.server.bidder.model.Result;
+import org.prebid.server.currency.CurrencyConversionService;
+import org.prebid.server.exception.PreBidException;
 import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.adview.ExtImpAdview;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class AdviewBidder implements Bidder<BidRequest> {
 
     private static final TypeReference<ExtPrebid<?, ExtImpAdview>> ADVIEW_EXT_TYPE_REFERENCE =
-            new TypeReference<ExtPrebid<?, ExtImpAdview>>() {
+            new TypeReference<>() {
             };
     private static final String ACCOUNT_ID_MACRO = "{{AccountId}}";
+    private static final String BIDDER_CURRENCY = "USD";
 
     private final String endpointUrl;
+    private final CurrencyConversionService currencyConversionService;
     private final JacksonMapper mapper;
 
-    public AdviewBidder(String endpointUrl, JacksonMapper mapper) {
+    public AdviewBidder(String endpointUrl,
+                        CurrencyConversionService currencyConversionService,
+                        JacksonMapper mapper) {
+
         this.endpointUrl = HttpUtil.validateUrl(Objects.requireNonNull(endpointUrl));
+        this.currencyConversionService = Objects.requireNonNull(currencyConversionService);
         this.mapper = Objects.requireNonNull(mapper);
     }
 
@@ -48,39 +57,66 @@ public class AdviewBidder implements Bidder<BidRequest> {
     public Result<List<HttpRequest<BidRequest>>> makeHttpRequests(BidRequest request) {
         final Imp firstImp = request.getImp().get(0);
         final ExtImpAdview extImpAdview;
+        final BidRequest modifiedBidRequest;
 
         try {
-            extImpAdview = mapper.mapper().convertValue(firstImp.getExt(), ADVIEW_EXT_TYPE_REFERENCE).getBidder();
-        } catch (IllegalArgumentException e) {
-            return Result.withError(BidderError.badInput("invalid imp.ext"));
+            extImpAdview = parseExtImp(firstImp);
+            final Price bidFloorPrice = resolveBidFloor(firstImp, request);
+            modifiedBidRequest = modifyRequest(request, extImpAdview.getMasterTagId(), bidFloorPrice);
+        } catch (PreBidException e) {
+            return Result.withError(BidderError.badInput(e.getMessage()));
         }
 
-        final BidRequest modifiedRequest = modifyRequest(request, extImpAdview.getMasterTagId());
         return Result.withValue(
-                HttpRequest.<BidRequest>builder()
-                        .method(HttpMethod.POST)
-                        .uri(resolveEndpoint(extImpAdview.getAccountId()))
-                        .headers(HttpUtil.headers())
-                        .body(mapper.encodeToBytes(modifiedRequest))
-                        .payload(modifiedRequest)
-                        .build());
+                BidderUtil.defaultRequest(modifiedBidRequest, resolveEndpoint(extImpAdview.getAccountId()), mapper));
     }
 
-    private static BidRequest modifyRequest(BidRequest bidRequest, String masterTagId) {
+    private ExtImpAdview parseExtImp(Imp imp) {
+        try {
+            return mapper.mapper().convertValue(imp.getExt(), ADVIEW_EXT_TYPE_REFERENCE).getBidder();
+        } catch (IllegalArgumentException e) {
+            throw new PreBidException("invalid imp.ext");
+        }
+    }
+
+    private Price resolveBidFloor(Imp imp, BidRequest bidRequest) {
+        final Price initialBidFloorPrice = Price.of(imp.getBidfloorcur(), imp.getBidfloor());
+        return BidderUtil.isValidPrice(initialBidFloorPrice)
+                ? convertBidFloor(initialBidFloorPrice, imp.getId(), bidRequest)
+                : initialBidFloorPrice;
+    }
+
+    private Price convertBidFloor(Price bidFloorPrice, String impId, BidRequest bidRequest) {
+        final String bidFloorCur = bidFloorPrice.getCurrency();
+        try {
+            final BigDecimal convertedPrice = currencyConversionService
+                    .convertCurrency(bidFloorPrice.getValue(), bidRequest, bidFloorCur, BIDDER_CURRENCY);
+
+            return Price.of(BIDDER_CURRENCY, convertedPrice);
+        } catch (PreBidException e) {
+            throw new PreBidException("Unable to convert provided bid floor currency from %s to %s for imp `%s`"
+                    .formatted(bidFloorCur, BIDDER_CURRENCY, impId));
+        }
+    }
+
+    private static BidRequest modifyRequest(BidRequest bidRequest, String masterTagId, Price bidFloorPrice) {
         return bidRequest.toBuilder()
-                .imp(modifyImps(bidRequest.getImp(), masterTagId))
+                .imp(modifyImps(bidRequest.getImp(), masterTagId, bidFloorPrice))
+                .cur(Collections.singletonList(BIDDER_CURRENCY))
                 .build();
     }
 
-    private static List<Imp> modifyImps(List<Imp> imps, String masterTagId) {
+    private static List<Imp> modifyImps(List<Imp> imps, String masterTagId, Price bidFloorPrice) {
         final List<Imp> modifiedImps = new ArrayList<>(imps);
-        modifiedImps.set(0, modifyImp(imps.get(0), masterTagId));
+        modifiedImps.set(0, modifyImp(imps.get(0), masterTagId, bidFloorPrice));
         return modifiedImps;
     }
 
-    private static Imp modifyImp(Imp imp, String masterTagId) {
+    private static Imp modifyImp(Imp imp, String masterTagId, Price bidFloorPrice) {
         return imp.toBuilder()
                 .tagid(masterTagId)
+                .bidfloor(bidFloorPrice.getValue())
+                .bidfloorcur(bidFloorPrice.getCurrency())
                 .banner(resolveBanner(imp.getBanner()))
                 .build();
     }
@@ -101,7 +137,7 @@ public class AdviewBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public final Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public final Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(httpCall.getRequest().getPayload(), bidResponse));
@@ -125,7 +161,7 @@ public class AdviewBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getBidMediaType(bid.getImpid(), bidRequest.getImp()),
                         bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static BidType getBidMediaType(String impId, List<Imp> imps) {
