@@ -6,13 +6,12 @@ import com.iab.openrtb.request.Imp;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.aja.proto.ExtImpAja;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -20,6 +19,7 @@ import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.ArrayList;
@@ -29,12 +29,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class AjaBidder implements Bidder<BidRequest> {
 
     private static final TypeReference<ExtPrebid<?, ExtImpAja>> AJA_EXT_TYPE_REFERENCE =
-            new TypeReference<ExtPrebid<?, ExtImpAja>>() {
+            new TypeReference<>() {
             };
 
     private final String endpointUrl;
@@ -72,10 +71,7 @@ public class AjaBidder implements Bidder<BidRequest> {
 
         for (final String tagId : tagIds) {
             final Imp imp = impsByTagID.get(tagId);
-            final HttpRequest<BidRequest> singleRequest = createSingleRequest(imp, bidRequest, endpointUrl, errors);
-            if (singleRequest == null) {
-                continue;
-            }
+            final HttpRequest<BidRequest> singleRequest = createSingleRequest(imp, bidRequest, endpointUrl);
             result.add(singleRequest);
         }
 
@@ -88,28 +84,19 @@ public class AjaBidder implements Bidder<BidRequest> {
                     .getBidder();
         } catch (IllegalArgumentException e) {
             errors.add(BidderError.badInput(
-                    String.format("Failed to unmarshal ext.bidder impID: %s err: %s", imp.getId(), e.getMessage())));
+                    "Failed to unmarshal ext.bidder impID: %s err: %s".formatted(imp.getId(), e.getMessage())));
         }
         return null;
     }
 
-    private HttpRequest<BidRequest> createSingleRequest(Imp imp, BidRequest request, String url,
-                                                        List<BidderError> errors) {
-        final BidRequest outgoingRequest = request.toBuilder()
-                .imp(Collections.singletonList(imp))
-                .build();
+    private HttpRequest<BidRequest> createSingleRequest(Imp imp, BidRequest request, String url) {
+        final BidRequest outgoingRequest = request.toBuilder().imp(Collections.singletonList(imp)).build();
 
-        return HttpRequest.<BidRequest>builder()
-                .method(HttpMethod.POST)
-                .uri(url)
-                .headers(HttpUtil.headers())
-                .body(mapper.encodeToBytes(outgoingRequest))
-                .payload(outgoingRequest)
-                .build();
+        return BidderUtil.defaultRequest(outgoingRequest, url, mapper);
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return extractBids(httpCall.getRequest().getPayload(), bidResponse);
@@ -130,7 +117,7 @@ public class AjaBidder implements Bidder<BidRequest> {
                 .flatMap(Collection::stream)
                 .map(bid -> bidFromResponse(bidRequest.getImp(), bid, errors, bidResponse.getCur()))
                 .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+                .toList();
         return Result.of(bidderBids, errors);
     }
 
@@ -154,6 +141,6 @@ public class AjaBidder implements Bidder<BidRequest> {
                 }
             }
         }
-        throw new PreBidException(String.format("Response received for unexpected type of bid bidID: %s", bidId));
+        throw new PreBidException("Response received for unexpected type of bid bidID: " + bidId);
     }
 }
