@@ -21,8 +21,8 @@ import org.prebid.server.bidder.invibes.model.InvibesInternalParams;
 import org.prebid.server.bidder.invibes.model.InvibesPlacementProperty;
 import org.prebid.server.bidder.invibes.model.InvibesTypedBid;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -30,6 +30,8 @@ import org.prebid.server.json.DecodeException;
 import org.prebid.server.json.JacksonMapper;
 import org.prebid.server.proto.openrtb.ext.ExtPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtRegs;
+import org.prebid.server.proto.openrtb.ext.request.ExtRequest;
+import org.prebid.server.proto.openrtb.ext.request.ExtRequestPrebid;
 import org.prebid.server.proto.openrtb.ext.request.ExtUser;
 import org.prebid.server.proto.openrtb.ext.request.invibes.ExtImpInvibes;
 import org.prebid.server.proto.openrtb.ext.request.invibes.model.InvibesDebug;
@@ -41,16 +43,16 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 public class InvibesBidder implements Bidder<InvibesBidRequest> {
 
     private static final TypeReference<ExtPrebid<?, ExtImpInvibes>> INVIBES_EXT_TYPE_REFERENCE =
-            new TypeReference<ExtPrebid<?, ExtImpInvibes>>() {
+            new TypeReference<>() {
             };
     private static final String INVIBES_BID_VERSION = "4";
     private static final String ADAPTER_VERSION = "prebid_1.0.0";
-    private static final String URL_HOST_MACRO = "{{Host}}";
+    private static final String URL_HOST_MACRO = "{{ZoneID}}";
 
     private final String endpointUrl;
     private final JacksonMapper mapper;
@@ -90,7 +92,7 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
             updateInvibesInternalParams(invibesInternalParams, extImpInvibes, imp);
         }
 
-        //TODO: add AMP parameter to invibesInternalParams, after reqInfo will be implemented
+        invibesInternalParams.setIsAmp(isAmp(request));
 
         final List<String> placementIds = invibesInternalParams.getBidParams().getPlacementIds();
         if (CollectionUtils.isEmpty(placementIds)) {
@@ -112,14 +114,13 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
         try {
             return mapper.mapper().convertValue(imp.getExt(), INVIBES_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
-            throw new PreBidException(
-                    String.format("Error parsing invibesExt parameters in impression with id: %s", imp.getId()));
+            throw new PreBidException("Error parsing invibesExt parameters in impression with id: " + imp.getId());
         }
     }
 
     private void validateImp(Imp imp) {
         if (imp.getBanner() == null) {
-            throw new PreBidException(String.format("Banner not specified in impression with id: %s", imp.getId()));
+            throw new PreBidException("Banner not specified in impression with id: " + imp.getId());
         }
     }
 
@@ -186,8 +187,8 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
 
     private HttpRequest<InvibesBidRequest> makeRequest(InvibesInternalParams invibesParams,
                                                        BidRequest request) {
-        final String host = resolveHost(invibesParams.getDomainId());
-        final String url = endpointUrl.replace(URL_HOST_MACRO, host);
+        final String subdomain = resolveHost(invibesParams.getDomainId());
+        final String url = endpointUrl.replace(URL_HOST_MACRO, subdomain);
         final InvibesBidRequest parameter = resolveParameter(invibesParams, request);
 
         final Device device = request.getDevice();
@@ -246,16 +247,12 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
     }
 
     private static String resolveHost(Integer domainId) {
-        if (domainId == null) {
-            return "bid.videostep.com";
-        } else if (domainId >= 1002) {
-            return String.format("bid%s.videostep.com", domainId - 1000);
-        } else if (domainId == 1) {
-            return "adweb.videostepstage.com";
-        } else if (domainId == 2) {
-            return "adweb.invibesstage.com";
+        if (domainId == 0 || domainId == 1 || domainId == 1001) {
+            return "bid";
+        } else if (domainId < 1002) {
+            return "bid" + domainId;
         } else {
-            return "bid.videostep.com";
+            return "bid" + (domainId - 1000);
         }
     }
 
@@ -272,14 +269,21 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
         return headers;
     }
 
+    private static boolean isAmp(BidRequest request) {
+        return Optional.ofNullable(request.getExt())
+                .map(ExtRequest::getPrebid)
+                .map(ExtRequestPrebid::getAmp)
+                .isPresent();
+    }
+
     @Override
-    public final Result<List<BidderBid>> makeBids(HttpCall<InvibesBidRequest> httpCall, BidRequest bidRequest) {
+    public final Result<List<BidderBid>> makeBids(BidderCall<InvibesBidRequest> httpCall, BidRequest bidRequest) {
         try {
             final InvibesBidderResponse bidResponse =
                     mapper.decodeValue(httpCall.getResponse().getBody(), InvibesBidderResponse.class);
             if (bidResponse != null && StringUtils.isNotBlank(bidResponse.getError())) {
                 return Result.withError(
-                        BidderError.badServerResponse(String.format("Server error: %s.", bidResponse.getError())));
+                        BidderError.badServerResponse("Server error: %s.".formatted(bidResponse.getError())));
             }
             return Result.of(extractBids(bidResponse), Collections.emptyList());
         } catch (DecodeException | PreBidException e) {
@@ -300,6 +304,6 @@ public class InvibesBidder implements Bidder<InvibesBidRequest> {
                 .filter(Objects::nonNull)
                 //TODO add DealPriority
                 .map(bid -> BidderBid.of(bid, BidType.banner, bidResponse.getCurrency()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
