@@ -1,6 +1,5 @@
 package org.prebid.server.bidder.tripleliftnative;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.iab.openrtb.request.App;
 import com.iab.openrtb.request.BidRequest;
@@ -9,13 +8,12 @@ import com.iab.openrtb.request.Publisher;
 import com.iab.openrtb.request.Site;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
+import org.prebid.server.bidder.model.BidderCall;
 import org.prebid.server.bidder.model.BidderError;
-import org.prebid.server.bidder.model.HttpCall;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -26,50 +24,31 @@ import org.prebid.server.proto.openrtb.ext.request.ExtPublisher;
 import org.prebid.server.proto.openrtb.ext.request.ExtPublisherPrebid;
 import org.prebid.server.proto.openrtb.ext.request.triplelift.ExtImpTriplelift;
 import org.prebid.server.proto.openrtb.ext.response.BidType;
+import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
 
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class TripleliftNativeBidder implements Bidder<BidRequest> {
 
-    private static final String UNKONWN_PUBLSIHER_ID = "unknown";
+    private static final String UNKNOWN_PUBLISHER_ID = "unknown";
 
     private static final TypeReference<ExtPrebid<?, ExtImpTriplelift>> TRIPLELIFT_EXT_TYPE_REFERENCE =
-            new TypeReference<ExtPrebid<?, ExtImpTriplelift>>() {
-            };
-    private static final TypeReference<List<String>> WHITELIST_TYPE_REFERENCE =
-            new TypeReference<List<String>>() {
+            new TypeReference<>() {
             };
 
     private final String endpointUrl;
     private final List<String> publisherWhiteList;
     private final JacksonMapper mapper;
 
-    public TripleliftNativeBidder(String endpointUrl, Map<String, String> extraInfo, JacksonMapper mapper) {
+    public TripleliftNativeBidder(String endpointUrl, List<String> publisherWhiteList, JacksonMapper mapper) {
         this.endpointUrl = HttpUtil.validateUrl(Objects.requireNonNull(endpointUrl));
+        this.publisherWhiteList = Objects.requireNonNull(publisherWhiteList);
         this.mapper = Objects.requireNonNull(mapper);
-        this.publisherWhiteList = initPublisherWhiteList(extraInfo);
-    }
-
-    private List<String> initPublisherWhiteList(Map<String, String> extraInfo) {
-        final String jsonWhiteList = extraInfo == null ? null : extraInfo.get("publisher_whitelist");
-
-        if (jsonWhiteList == null) {
-            return Collections.emptyList();
-        }
-
-        try {
-            final List<String> whiteList = mapper.mapper().readValue(jsonWhiteList, WHITELIST_TYPE_REFERENCE);
-            return whiteList == null ? Collections.emptyList() : whiteList;
-        } catch (JsonProcessingException e) {
-            throw new PreBidException("TripleliftNativeBidder could not unmarshal config json");
-        }
     }
 
     @Override
@@ -99,14 +78,7 @@ public class TripleliftNativeBidder implements Bidder<BidRequest> {
                 .imp(validImps)
                 .build();
 
-        return Result.of(Collections.singletonList(
-                        HttpRequest.<BidRequest>builder()
-                                .method(HttpMethod.POST)
-                                .uri(endpointUrl)
-                                .body(mapper.encodeToBytes(updatedRequest))
-                                .headers(HttpUtil.headers())
-                                .payload(updatedRequest)
-                                .build()),
+        return Result.of(Collections.singletonList(BidderUtil.defaultRequest(updatedRequest, endpointUrl, mapper)),
                 errors);
     }
 
@@ -129,22 +101,18 @@ public class TripleliftNativeBidder implements Bidder<BidRequest> {
 
     private ExtImpTriplelift parseExtImpTriplelift(Imp imp) {
         try {
-            return mapper.mapper().convertValue(imp.getExt(),
-                    TRIPLELIFT_EXT_TYPE_REFERENCE).getBidder();
+            return mapper.mapper().convertValue(imp.getExt(), TRIPLELIFT_EXT_TYPE_REFERENCE).getBidder();
         } catch (IllegalArgumentException e) {
             throw new PreBidException(e.getMessage(), e);
         }
     }
 
     private String effectivePublisherId(BidRequest bidRequest) {
-        String publisherId = UNKONWN_PUBLSIHER_ID;
-
         final Publisher publisher = findPublisher(bidRequest);
         if (publisher == null) {
-            return publisherId;
+            return UNKNOWN_PUBLISHER_ID;
         }
         final String id = publisher.getId();
-        publisherId = StringUtils.isBlank(id) ? UNKONWN_PUBLSIHER_ID : id;
 
         final ExtPublisher publisherExt = publisher.getExt();
         final ExtPublisherPrebid extPublisherPrebid = publisherExt != null ? publisherExt.getPrebid() : null;
@@ -152,7 +120,7 @@ public class TripleliftNativeBidder implements Bidder<BidRequest> {
             return extPublisherPrebid.getParentAccount();
         }
 
-        return publisherId;
+        return StringUtils.isBlank(id) ? UNKNOWN_PUBLISHER_ID : id;
     }
 
     private static Publisher findPublisher(BidRequest bidRequest) {
@@ -170,7 +138,7 @@ public class TripleliftNativeBidder implements Bidder<BidRequest> {
     }
 
     @Override
-    public Result<List<BidderBid>> makeBids(HttpCall<BidRequest> httpCall, BidRequest bidRequest) {
+    public Result<List<BidderBid>> makeBids(BidderCall<BidRequest> httpCall, BidRequest bidRequest) {
         try {
             final BidResponse bidResponse = mapper.decodeValue(httpCall.getResponse().getBody(), BidResponse.class);
             return Result.withValues(extractBids(bidResponse));
@@ -192,6 +160,6 @@ public class TripleliftNativeBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, BidType.xNative, bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
