@@ -40,7 +40,7 @@ public class DeliveryProgressService implements ApplicationEventProcessor {
 
     private final long lineItemStatusTtl;
 
-    protected DeliveryProgress overallDeliveryProgress;
+    protected final DeliveryProgress overallDeliveryProgress;
     protected DeliveryProgress currentDeliveryProgress;
 
     public DeliveryProgressService(DeliveryProgressProperties deliveryProgressProperties,
@@ -119,7 +119,7 @@ public class DeliveryProgressService implements ApplicationEventProcessor {
         if (lineItem != null) {
             currentDeliveryProgress.recordWinEvent(lineItemId);
             criteriaLogManager.log(logger, lineItem.getAccountId(), lineItem.getSource(), lineItemId,
-                    String.format("Win event for LineItem with id %s was recorded", lineItemId), logger::debug);
+                    "Win event for LineItem with id %s was recorded".formatted(lineItemId), logger::debug);
         }
     }
 
@@ -181,10 +181,10 @@ public class DeliveryProgressService implements ApplicationEventProcessor {
     /**
      * Returns {@link LineItemStatusReport} for the given {@link LineItem}'s ID.
      */
-    public LineItemStatusReport getLineItemStatusReport(String lineItemId, ZonedDateTime now) {
+    public LineItemStatusReport getLineItemStatusReport(String lineItemId) {
         final LineItem lineItem = lineItemService.getLineItemById(lineItemId);
         if (lineItem == null) {
-            throw new PreBidException(String.format("LineItem not found: %s", lineItemId));
+            throw new PreBidException("LineItem not found: " + lineItemId);
         }
 
         final DeliveryPlan activeDeliveryPlan = lineItem.getActiveDeliveryPlan();
@@ -201,6 +201,8 @@ public class DeliveryProgressService implements ApplicationEventProcessor {
                 .readyToServeTimestamp(lineItem.getReadyAt())
                 .spentTokens(activeDeliveryPlan.getSpentTokens())
                 .pacingFrequency(activeDeliveryPlan.getDeliveryRateInMilliseconds())
+                .accountId(lineItem.getAccountId())
+                .target(lineItem.getTargeting())
                 .build();
     }
 }
