@@ -57,7 +57,7 @@ public class ContextRunner {
             final Context context = contextFactory.get();
 
             final Promise<T> promise = Promise.promise();
-            promise.future().setHandler(ar -> {
+            promise.future().onComplete(ar -> {
                 if (ar.failed()) {
                     logger.fatal("Fatal error occurred while running action on Vertx context", ar.cause());
                     actionFailed.compareAndSet(false, true);
@@ -77,7 +77,7 @@ public class ContextRunner {
         try {
             if (!completionLatch.await(timeoutMs, TimeUnit.MILLISECONDS)) {
                 throw new RuntimeException(
-                        String.format("Action has not completed within defined timeout %d ms", timeoutMs));
+                        "Action has not completed within defined timeout %d ms".formatted(timeoutMs));
             } else if (actionFailed.get()) {
                 throw new RuntimeException("Action failed");
             }
